Worked on ch 12 ex 2

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\dpowell2\\AppData\\Roaming\\NetBeans\\8.0\\tomcat80.properties
+deploy.ant.properties.file=/Users/swebber2/Library/Application Support/NetBeans/8.1/tomcat80.properties
+file.reference.tomcat-dbcp.jar-1=/Users/eelkin/NetBeansProjects/ch12_ex1_sqlGateway/build/web/WEB-INF/lib/tomcat-dbcp.jar
 j2ee.server.domain=C:/Users/Joel/AppData/Roaming/NetBeans/7.4/apache-tomcat-7.0.41.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 8.0
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.0
+j2ee.server.home=/usr/local/Cellar/tomcat/8.0.35/libexec
+j2ee.server.instance=tomcat80:home=/usr/local/Cellar/tomcat/8.0.35/libexec
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\dpowell2\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=/Users/swebber2/Library/Application Support/NetBeans/8.1/build.properties
