Changes made to ex2

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.=../../../../..
+file.reference.tomcat-dbcp.jar=/Users/swebber2/exercise-ch12/web/WEB-INF/lib/tomcat-dbcp.jar
 file.reference.tomcat-dbcp.jar-1=C:\\murach\\servlet_and_jsp\\netbeans\\libs\\tomcat-dbcp.jar
 includes=**
 j2ee.compile.on.save=false
@@ -38,7 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.tomcat-dbcp.jar-1}
+    ${file.reference.tomcat-dbcp.jar-1}:\
+    ${file.reference.tomcat-dbcp.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
